# Chapito

./: CHANGELOG.md  README.md  config.ini.sample  main.py  pyproject.toml
.github/workflows/: main.yml
chapito/: ai_studio_chat.py  anthropic_chat.py  config.py  deepseek_chat.py  duckduckgo_chat.py  gemini_chat.py  grok_chat.py  kimi_chat.py  mistral_chat.py  openai_chat.py  perplexity_chat.py  proxy.py  qwen_chat.py  types.py
chapito/tools/: tools.py
scripts/: run_all_chats.py
tests/: test_anthropic.py  test_config.py
